src/objects/OMNI_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Case_Type_Name_Origin__c</fullName>
        <label>CaseType Name / Origin</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demographics</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Govt Cases</fullName>
                </value>
                <value>
                    <fullName>Network Change</fullName>
                </value>
                <value>
                    <fullName>Other Provider Updates</fullName>
                </value>
                <value>
                    <fullName>Web On-boarding - Contracting</fullName>
                </value>
                <value>
                    <fullName>Web On-boarding - Data Entry</fullName>
                </value>
                <value>
                    <fullName>Ancillary Networks</fullName>
                </value>
                <value>
                    <fullName>Balance Billing</fullName>
                </value>
                <value>
                    <fullName>Delegated Credentialing</fullName>
                </value>
                <value>
                    <fullName>Fee Schedule Requests</fullName>
                </value>
                <value>
                    <fullName>Gov Netops Provider Update</fullName>
                </value>
                <value>
                    <fullName>Gov Providers</fullName>
                </value>
                <value>
                    <fullName>HCS-X6100</fullName>
                </value>
                <value>
                    <fullName>HMO Networks</fullName>
                </value>
                <value>
                    <fullName>Internal PNC Inquiries</fullName>
                </value>
                <value>
                    <fullName>Netops Provider Update</fullName>
                </value>
                <value>
                    <fullName>Network Roster Submission</fullName>
                </value>
                <value>
                    <fullName>OK Network Management</fullName>
                </value>
                <value>
                    <fullName>PNC NetOps Inquiries</fullName>
                </value>
                <value>
                    <fullName>PPN CorpusChristi</fullName>
                </value>
                <value>
                    <fullName>PPN EIPaso</fullName>
                </value>
                <value>
                    <fullName>PPN Lubbock-Amerillo</fullName>
                </value>
                <value>
                    <fullName>Professional Provider Network Dept</fullName>
                </value>
                <value>
                    <fullName>Provider Inquiry</fullName>
                </value>
                <value>
                    <fullName>Provider Relation DFW</fullName>
                </value>
                <value>
                    <fullName>Provider Relations Houston</fullName>
                </value>
                <value>
                    <fullName>Provider Relations Midland</fullName>
                </value>
                <value>
                    <fullName>Provider Relations South Texas</fullName>
                </value>
                <value>
                    <fullName>Provider Relations IL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OMNI_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Id__c</fullName>
        <label>Plan Id</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IL1</fullName>
                </value>
                <value>
                    <fullName>OK1</fullName>
                </value>
                <value>
                    <fullName>MT1</fullName>
                </value>
                <value>
                    <fullName>NM1</fullName>
                </value>
                <value>
                    <fullName>TX1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type_s__c</fullName>
        <label>Request Type(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Change</fullName>
                </value>
                <value>
                    <fullName>Billing Address Change</fullName>
                </value>
                <value>
                    <fullName>Credentialing Change</fullName>
                </value>
                <value>
                    <fullName>NPI Tax Id Change</fullName>
                </value>
                <value>
                    <fullName>Name Change Request</fullName>
                </value>
                <value>
                    <fullName>Other Provider Updates</fullName>
                </value>
                <value>
                    <fullName>Physical Address Change</fullName>
                </value>
                <value>
                    <fullName>Remove Provider from Group/Location</fullName>
                </value>
                <value>
                    <fullName>nm_network_scripting@bcbsnm.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reserved_Queue_Users__c</fullName>
        <label>Reserved Queue Users</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OMNI Queue</label>
    <listViews>
        <fullName>OMNI_ILMedicaidIDRequest_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>IL Medicaid ID Request</label>
        <queue>OMNI_ILMedicaidIDRequest</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_ILUniversalRoster_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>IL Universal Roster</label>
        <queue>OMNI_ILUniversalRoster</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_IL_Ancillary_Networks_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>OMNI_IL_Ancillary Networks</label>
        <queue>OMNI_IL_Ancillary_Networks</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_IL_Balance_Billing_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>OMNI_IL_Balance Billing</label>
        <queue>OMNI_IL_Balance_Billing</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_IL_Central_IL_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>OMNI_IL_Central IL</label>
        <queue>OMNI_IL_Central_IL</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_IL_Chicago_Metro_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>OMNI_IL_Chicago Metro</label>
        <queue>OMNI_IL_Chicago_Metro</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_IL_Commercial_Encounters_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>OMNI_IL_Commercial Encounters</label>
        <queue>OMNI_IL_Commercial_Encounters</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_IL_Consumer_Provider_Data_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>OMNI_IL_Consumer Provider Data</label>
        <queue>OMNI_IL_Consumer_Provider_Data</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_IL_Facility_Contract_Notices_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>OMNI_IL_Facility Contract Notices</label>
        <queue>OMNI_IL_Facility_Contract_Notices</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_IL_Facility_Demographic_Changes_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>OMNI_IL_Facility Demographic Changes</label>
        <queue>OMNI_IL_Facility_Demographic_Changes</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_IL_HFS_OIGInquiries_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>OMNI_IL_HFS_OIGInquiries</label>
        <queue>OMNI_IL_HFS_OIGInquiries</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_IL_ILCONTRACTS_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>OMNI_IL_ILCONTRACTS</label>
        <queue>OMNI_IL_ILCONTRACTS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_IL_IL_Ancillary_Contracting_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>OMNI_IL_IL Ancillary Contracting</label>
        <queue>OMNI_IL_IL_Ancillary_Contracting</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_IL_IL_BCBSAinquiries_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>OMNI_IL_IL BCBSAinquiries</label>
        <queue>OMNI_IL_IL_BCBSAinquiries</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OMNI_IL_IL_Comm_Professional_Contract_OMNI_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>OMNI_IL_IL Comm Professional Contract</label>
        <queue>OMNI_IL_IL_Comm_Professional_Contract</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OMNI Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>